2016-10-07  Carl Hetherington  <cth@carlh.net>

	* Fix XML subtitle output in some cases.

2016-10-06  c.hetherington  <cth@carlh.net>

	* Allow selection of CPL in multi-CPL DCPs (#733).

2016-10-05  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-10-04  c.hetherington  <cth@carlh.net>

	* Fix error when examining files with embedded subtitles in some cases (#969).

2016-10-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.30 released.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on make DCP if there are old audio analysis files.

	* Updated zh_CN translation from 刘汉源.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.29 released.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.9.28 released.

2016-09-30  c.hetherington  <cth@carlh.net>

	* Order jobs from first-to-execute to last in the batch converter.

2016-09-28  c.hetherington  <cth@carlh.net>

	* Fix crash on "report a problem" in the KDM creator.

2016-09-27  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2016-09-26  c.hetherington  <cth@carlh.net>

	* Disallow refer-to-DCP if the video frame size is different to that in the project (#963).

	* Fix multi-select in the timeline (#954).

	* Add option to Windows installer to add desktop shortcuts (#965).

	* Updated zh_CN translation from 刘汉源.

2016-09-26  c.hetherington  <cth@carlh.net>

	* Don't re-use J2K data if it's the wrong size (#964).

2016-09-23  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.27 released.

2016-09-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.26 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>

	* Add confirm dialogue for job cancellation.

	* Version 2.9.25 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.24 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>
